force-app/main/default/objects/Project_Status_Deliverable__c/Project_Status_Deliverable__c.object-meta.xml
<CustomObject>
    <label>Deliverable</label>
    <nameField>
        <label>Deliverable Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deliverables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>