force-app/main/default/objects/Project_Status_Deliverable__c/fields/At_Risk__c.field-meta.xml
<CustomField>
    <fullName>At_Risk__c</fullName>
    <inlineHelpText>Yes / No</inlineHelpText>
    <label>At Risk</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>