force-app/main/default/objects/Project_Status_Deliverable__c/fields/Project_Status__c.field-meta.xml
<CustomField>
    <fullName>Project_Status__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Status</label>
    <referenceTo>Project_Status__c</referenceTo>
    <relationshipLabel>Deliverables</relationshipLabel>
    <relationshipName>Deliverables</relationshipName>
    <type>Lookup</type>
</CustomField>