force-app/main/default/objects/Project_Status_Deliverable__c/listViews/TMG_Operations_Project_Status_Deliverable.listView-meta.xml
<ListView>
    <fullName>TMG_Operations_Project_Status_Deliverable</fullName>
    <filterScope>Queue</filterScope>
    <label>TMG Operations</label>
    <queue>TMG_Operations</queue>
    <sharedTo>
        <allInternalUsers/>
    </sharedTo>
</ListView>